--- a/wind_rag_webapp/backend/static/index.html
+++ b/wind_rag_webapp/backend/static/index.html
@@ -58,6 +58,7 @@
     .logo-wrap.logo-right {
       margin-left: auto;
       justify-content: flex-end;
+      max-width: clamp(300px, 45vw, 760px);
     }
     .logo {
       width: 141px;
@@ -73,8 +74,10 @@
       background: transparent;
       padding: 0;
       border-radius: 0;
-      width: 1260px;
-      height: 190px;
+      width: 100%;
+      max-width: clamp(300px, 45vw, 760px);
+      height: auto;
+      max-height: 170px;
       object-position: right center;
     }
     .logo.is-spinning {
@@ -867,19 +870,6 @@
           <label>Mechanic notes (optional)</label>
           <textarea id="mechanicNotes" placeholder="e.g., customer report, recent maintenance, observed behavior..."></textarea>
 
-          <label>Evaluation case</label>
-          <div class="row">
-            <div>
-              <select id="evalSelect">
-                <option value="">Select a case...</option>
-              </select>
-              <div class="small" id="evalHint">Load a fixed case to auto-fill SCADA and text inputs.</div>
-            </div>
-            <div style="display:flex; align-items:flex-end;">
-              <button type="button" class="btn-secondary" id="evalApplyBtn">Use case</button>
-            </div>
-          </div>
-
           <label>Images (drag & drop). Images are used for automatic descriptions.</label>
           <div id="drop" class="drop">
             <b>Drop images here</b><div class="small">or click to select.</div>
@@ -944,7 +934,7 @@
             </div>
             <div>
               <label>Show rows</label>
-              <input id="showRows" type="number" min="3" max="30" value="10" />
+              <input id="showRows" type="number" min="1" max="10" value="10" />
               <div class="small">Client-side filter</div>
             </div>
           </div>
@@ -1009,7 +999,7 @@
           <div class="table-controls">
             <div class="left">
               <span class="small">Show</span>
-              <input class="range" id="rangeRows" type="range" min="3" max="30" value="10" />
+              <input class="range" id="rangeRows" type="range" min="1" max="10" value="10" />
               <span class="pill" id="rangeLabel">10</span>
             </div>
           </div>
@@ -1049,8 +1039,6 @@
     lastDiagnosisRiskCode: null,
     lastDiagnosisMessage: null,
     runToken: 0,
-    evalCases: [],
-    evalCase: null,
   };
 
   function el(id){ return document.getElementById(id); }
@@ -1670,34 +1658,6 @@
     applyFilters();
   }
 
-  async function loadEvalCases(){
-    try {
-      const resp = await fetch('/api/eval/cases');
-      if (!resp.ok) {
-        throw new Error('Failed to load eval cases');
-      }
-      const data = await resp.json();
-      state.evalCases = Array.isArray(data) ? data : [];
-      const sel = el('evalSelect');
-      if (!sel) {
-        return;
-      }
-      sel.innerHTML = '<option value="">Select a case...</option>';
-      state.evalCases.forEach((c) => {
-        const opt = document.createElement('option');
-        const label = c?.scada_case?.class_label || '';
-        opt.value = c.id || '';
-        opt.textContent = label ? `${c.id} (${label})` : c.id;
-        sel.appendChild(opt);
-      });
-    } catch (e) {
-      const hint = el('evalHint');
-      if (hint) {
-        hint.textContent = 'Eval cases not available.';
-      }
-    }
-  }
-
   function getSelectedTags() {
     const checkboxes = el('tagCheckboxes').querySelectorAll('input[type="checkbox"]:checked');
     return Array.from(checkboxes).map(cb => cb.value);
@@ -1807,7 +1767,7 @@
 
   function renderResultsTable(items){
     state.lastResults = items || [];
-    const showN = Math.max(3, Math.min(30, parseInt(el('showRows').value || '10', 10)));
+    const showN = Math.max(1, Math.min(10, parseInt(el('showRows').value || '10', 10)));
 
     const body = el('resultsBody');
     body.innerHTML = '';
@@ -1879,19 +1839,12 @@
     let mechanicNotes = el('mechanicNotes').value || '';
     const scadaEnabled = el('scadaToggle').checked;
     let scadaId = scadaEnabled ? el('scadaSelect').value : null;
-    const evalCase = state.evalCase;
-    if (!mechanicNotes && evalCase?.mechanic_notes) {
-      mechanicNotes = evalCase.mechanic_notes;
-    }
     const topK = Math.max(3, Math.min(30, parseInt(el('topK').value || '10', 10)));
 
     const imageDescriptions = state.files
       .filter(f => f.use !== false)
       .map(f => (f.desc || '').trim())
       .filter(Boolean);
-    if (evalCase?.fault_images_description) {
-      imageDescriptions.push(String(evalCase.fault_images_description).trim());
-    }
 
     const imageTargets = state.files
       .filter(f => f.use !== false && !!f.data_url);
@@ -1907,7 +1860,6 @@
       }
 
       const userSummary = [
-        evalCase?.id && `Eval case: ${evalCase.id}`,
         mechanicNotes && `Mechanic notes: ${mechanicNotes}`,
         scadaId && `SCADA: ${scadaId}`,
         imageDescriptions.length && `Images: ${imageDescriptions.join(' | ')}`,
@@ -1919,14 +1871,8 @@
       setCurrentRecommendation("Thinking...", true);
 
       // Get SCADA case data from filtered cards (only if enabled)
-      let scadaCase = null;
-      if (scadaEnabled && evalCase?.scada_case) {
-        scadaCase = evalCase.scada_case;
-        scadaId = scadaCase.window_id || scadaCase.case_id || evalCase.id || scadaId;
-      } else {
-        const selectedCard = scadaEnabled ? state.filteredScadaCards.find(c => c.id === scadaId) : null;
-        scadaCase = selectedCard?.case || null;
-      }
+      const selectedCard = scadaEnabled ? state.filteredScadaCards.find(c => c.id === scadaId) : null;
+      const scadaCase = selectedCard?.case || null;
 
       requestDiagnosis({
         scada_id: scadaId,
@@ -2211,38 +2157,6 @@
       renderResultsTable(state.lastResults);
     };
 
-    const evalBtn = el('evalApplyBtn');
-    if (evalBtn) {
-      evalBtn.onclick = () => {
-        const sel = el('evalSelect');
-        const caseId = sel ? sel.value : '';
-        const found = state.evalCases.find((c) => c.id === caseId);
-        if (!found) {
-          state.evalCase = null;
-          const hint = el('evalHint');
-          if (hint) {
-            hint.textContent = 'Load a fixed case to auto-fill SCADA and text inputs.';
-          }
-          return;
-        }
-        state.evalCase = found;
-        el('mechanicNotes').value = found.mechanic_notes || '';
-        const scadaToggle = el('scadaToggle');
-        if (scadaToggle) {
-          scadaToggle.checked = true;
-          el('scadaSection').classList.remove('collapsed');
-        }
-        const preview = el('scadaPreview');
-        if (preview) {
-          preview.textContent = (found.scada_case?.summary || '').slice(0, 200);
-        }
-        const hint = el('evalHint');
-        if (hint) {
-          hint.textContent = `Loaded ${found.id}. Ready to run.`;
-        }
-      };
-    }
-
     document.querySelectorAll(".collapse-btn").forEach((btn) => {
       const targetId = btn.getAttribute("data-target");
       if (!targetId) {
@@ -2273,7 +2187,6 @@
     } catch (e) {
       showWarn(e.message);
     }
-    await loadEvalCases();
     updateChatMetrics();
   })();
 </script>
